# solarview-alarms

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
apps/alarms/: admin.py  apps.py  catalog.py  context.py  engine.py  models.py  tasks.py
apps/alarms/migrations/: 0001_initial.py  0002_seed_rules.py  0003_default_schedules.py  0004_enable_tmod_invalid.py  0005_solar_margin_params.py  0006_t35_relay_params.py  0007_weather_night_gate.py  0008_meter_night_gate.py  0009_dawn_window_margins.py  0010_comm_poa_gate.py  0011_dawn_energy_floor.py  0012_meter_full_hour_window.py
apps/alarms/rules/: __init__.py  base.py  communication.py  data_quality.py  grid.py  helpers.py  inverter.py  meters.py  project.py  relay_normalize.py  strings.py
apps/alarms/tests/: test_catalog.py  test_check_sla.py  test_context.py  test_engine.py  test_models.py  test_relay_normalize.py  test_rule_project_no_generation.py  test_rule_tmod_invalid.py  test_rule_weather_comm_lost.py  test_rules_communication.py  test_rules_data_quality.py  test_rules_grid.py  test_rules_inverter_strings.py  test_rules_meters.py  (+1 more)
apps/notifications/: admin.py  dispatcher.py  models.py  tasks.py
apps/plants/: admin.py  models.py  tasks.py
config/: celery.py  urls.py
config/settings/: base.py  prod.py  test.py
docs/: DISENO.md  REPORTE-NOCHE-2026-07-09.md
integrations/solarview/: client.py  exceptions.py  schemas.py
requerimientos-alarmas/: Alarmas Solarview.xlsx
scripts/probe/: probe_api.py
tests/: test_bootstrap.py  test_celery.py  test_health.py
(+28 files in other folders)
