[project]
name = "solarview-alarms"
version = "0.1.0"
description = "Sistema de alarmas para plantas solares SolarView"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg[binary]>=3.1",
    "celery[redis]>=5.4",
    "django-celery-beat>=2.6",
    "django-environ>=0.11",
    "djangorestframework>=3.15",
    "requests>=2.32",
    "astral>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "responses>=0.25",
    "factory-boy>=3.3",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
testpaths = ["tests", "apps", "integrations"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
